# trader-deprecated-2

./: Cargo.toml  README.md  up.sql
api/: Cargo.toml
api/src/: asset.rs  candlestick.rs  error.rs  interval.rs  lib.rs  market.rs  price.rs  quantity.rs  simulated.rs  subscription.rs
binance-api/: Cargo.toml
binance-api/src/: lib.rs  model.rs  websocket.rs
trader/: Cargo.toml
trader/src/: indicator.rs  investor.rs  lib.rs  trader.rs
