[package]
name = "binance-api"
version = "0.1.0"
authors = ["fabianboesiger <boesiger.fabian@outlook.com>"]
edition = "2018"

[dependencies]
api = { path = "../api" }
tokio = { version = "^0.2", features = ["full"] }
reqwest = { version = "^0.10", features = ["json"] }
async-trait = "^0.1"
chrono = "^0.4"
sha2 = "^0.9"
hmac = "^0.8"
hex = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
stonks = "^0.2"
tokio-tungstenite = "^0.10"