[package]
name = "binance-api"
version = "0.1.0"
authors = ["fabianboesiger <boesiger.fabian@outlook.com>"]
edition = "2018"

[dependencies]
api = { path = "../api" }
tokio = { version = "^0.2", features = ["full"] }
reqwest = { version = "^0.10", features = ["json"] }
async-trait = "^0.1"
chrono = { version = "^0.4", features = ["serde"] }
sha2 = "^0.9"
hmac = "^0.8"
hex = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
tokio-tungstenite = { version = "^0.10", features = ["tls"] }
futures = { version = "^0.3" }
dotenv = "0.15"